# MixWeaver

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routers/: auth.py  billboard.py  playlists.py  stats.py
backend/app/services/: scraper.py  sorting_logic.py  spotify_client.py
frontend/: index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Hero.tsx  LoadingSpinner.tsx  Navbar.tsx
frontend/src/pages/: About.tsx  Dashboard.tsx  Features.tsx  Home.tsx  Library.tsx  Stats.tsx  Tools.tsx
