[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.128.0",
    "flask>=3.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "spotipy>=2.25.2",
    "uvicorn>=0.40.0",
]
